@@ -11,4 +11,4 @@ requires:
     Test::Simple:                  0.4
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.30
