@@ -85,6 +85,9 @@ like(join('', @prof), qr/\+\s+1\s+\Q$sql\E/m);
 
 # should be able to load DBI::ProfileDumper::Apache outside apache
 # this also naturally checks for syntax errors etc.
-require_ok('DBI::ProfileDumper::Apache');
+SKIP: {
+    skip "developer-only test", 1, unless -d ".svn" && -f "MANIFEST.SKIP";
+    require_ok('DBI::ProfileDumper::Apache')
+}
 
 1;
